--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         Cascading Style Sheets (CSS) é um mecanismo para adicionar estilo a um
         documento web.
       </p>
+      <div>
+        <h3>Testando uma alteração no código</h3>
+      </div>
       <a href="./o-que-e-css.html">Ler artigo completo</a>
     </section>
     <section>
