Add tag Bold in h1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Artigos</title>
   </head>
   <body>
-    <h1>Exemplo de artigos</h1>
+    <h1><b> Exemplo de artigos</b></h1>
     <section>
       <h2>O que é HTML?</h2>
       <p>
